--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
     "require": {
         "php": "^7.4",
         "cycle/orm": "^1.2",
-        "foxy/foxy": "^1.0",
         "form-manager/form-manager": "^6.0",
+        "foxy/foxy": "^1.0",
         "maileryio/widget-dataview": "dev-master",
-        "maileryio/widget-link": "dev-master",
         "maileryio/widget-form": "dev-master",
+        "maileryio/widget-link": "dev-master",
+        "opis/closure": "^3.5",
         "yiisoft/router": "^3.0@dev"
     },
     "require-dev": {
