--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
 {
-    "license": "BSD-3-Clause"
+    "license": "BSD-3-Clause",
+    "dependencies": {
+        "@maileryio/mailery-brand-assets": "git+ssh://git@github.com:maileryio/mailery-brand-assets.git#master"
+    }
 }
