--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
         "cycle/orm": "^1.2",
         "form-manager/form-manager": "^6.0",
         "foxy/foxy": "^1.0",
-        "maileryio/mailery-menu": "^1.0",
-        "maileryio/mailery-web": "dev-master",
+        "maileryio/mailery-menu": "dev-master",
         "maileryio/widget-dataview": "dev-master",
         "maileryio/widget-form": "dev-master",
         "maileryio/widget-link": "dev-master",
         "opis/closure": "^3.5",
         "yiisoft/router": "^3.0@dev",
+        "yiisoft/view": "^3.0@dev",
         "yiisoft/yii-cycle": "^3.0@dev"
     },
     "require-dev": {
