--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "license": "BSD-3-Clause",
     "dependencies": {
+        "@composer-asset/maileryio--widget-link": "file:./vendor/foxy/composer-asset/maileryio/widget-link",
         "@maileryio/mailery-brand-assets": "git+ssh://git@github.com:maileryio/mailery-brand-assets.git#master"
     }
 }
