--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "php": "^7.4",
         "cycle/orm": "^1.2",
         "form-manager/form-manager": "^6.0",
-        "foxy/foxy": "^1.0",
         "maileryio/mailery-menu": "dev-master",
+        "maileryio/mailery-web": "dev-master",
         "maileryio/widget-dataview": "dev-master",
         "maileryio/widget-form": "dev-master",
         "maileryio/widget-link": "dev-master",
@@ -61,10 +61,6 @@
         }
     },
     "config": {
-        "foxy": {
-            "enabled": true,
-            "manager": "yarn"
-        },
         "sort-packages": true
     }
 }
