--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "php": "^7.4",
         "cycle/orm": "^1.2",
         "form-manager/form-manager": "^6.0",
+        "foxy/foxy": "^1.0",
         "maileryio/mailery-menu": "dev-master",
         "maileryio/mailery-web": "dev-master",
         "maileryio/widget-dataview": "dev-master",
@@ -61,6 +62,10 @@
         }
     },
     "config": {
+        "foxy": {
+            "enabled": true,
+            "manager": "yarn"
+        },
         "sort-packages": true
     }
 }
