--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "dependencies": {
         "@composer-asset/maileryio--mailery-web": "file:./vendor/foxy/composer-asset/maileryio/mailery-web",
         "@composer-asset/maileryio--widget-link": "file:./vendor/foxy/composer-asset/maileryio/widget-link",
-        "@maileryio/mailery-brand-assets": "git+ssh://git@github.com:maileryio/mailery-brand-assets.git#master"
+        "@maileryio/mailery-brand-assets": "git+ssh://git@github.com/maileryio/mailery-brand-assets.git#master"
     }
 }
