--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,9 @@
         },
         "config-plugin": {
             "params": "config/params.php",
-            "web": "config/web.php"
+            "common": "config/common.php",
+            "web": "config/web.php",
+            "providers-web": "config/providers-web.php"
         }
     },
     "config": {
