--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "yiisoft/form": "^1.0@dev",
         "yiisoft/router": "^3.0@dev",
         "yiisoft/view": "^3.0@dev",
+        "yiisoft/yii-bootstrap5": "^3.0@dev",
         "yiisoft/yii-cycle": "^3.0@dev",
         "yiisoft/yii-widgets": "^3.0@dev"
     },
