--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,7 @@
         "maileryio/widget-dataview": "dev-master",
         "maileryio/widget-form": "dev-master",
         "maileryio/widget-link": "dev-master",
-        "opis/closure": "^3.5",
-        "yiisoft/form": "^1.0@dev",
-        "yiisoft/router": "^3.0@dev",
-        "yiisoft/view": "^2.0",
-        "yiisoft/yii-bootstrap5": "^3.0@dev",
-        "yiisoft/yii-cycle": "^3.0@dev",
-        "yiisoft/yii-widgets": "^3.0@dev"
+        "opis/closure": "^3.5"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
