--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,9 @@
             "params": "params.php",
             "common": "common.php",
             "web": "web.php",
-            "rbac": "rbac.php",
+            "rbac-assignments": "rbac/assignments.php",
+            "rbac-items": "rbac/items.php",
+            "rbac-rules": "rbac/rules.php",
             "routes": "routes.php"
         },
         "config-plugin-options": {
